--- a/DeidreFinal/FinalMaster.Master
+++ b/DeidreFinal/FinalMaster.Master
@@ -5,21 +5,49 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <link href="FinalStyle.css" rel="stylesheet" />
-    <script src="FinalJavaScript.js"></script>
+    <script type="text/javascript" src="FinalJavaScript.js" ></script>
+     
+ 
     <title>
         <asp:ContentPlaceHolder ID="head" runat="server">
         </asp:ContentPlaceHolder>
     </title>
 </head>
 <body>
-    <form id="form1" runat="server">
+    
     <div>
         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-        
+        	<div class="navigation">
+  		<ul class="nav">
+  			<li>
+  				<a href="#">Home</a>
+  			</li>
+  			<li>
+  				<a href="#">Services</a>
+  				<ul>
+  					<li><a href="#">Consulting</a></li>
+  					<li><a href="#">Sales</a></li>
+  					<li><a href="#">Support</a></li>
+  				</ul>
+  			</li>
+  			<li>
+  				<a href="#">About Us</a>
+  				<ul>
+  					<li><a href="#">Company</a></li>
+  					<li><a href="#">Mission</a></li>
+  					<li><a href="#">Contact Information</a></li>
+  				</ul>
+  			</li>
+  		</ul>
+  	</div>
+           
+           
         </asp:ContentPlaceHolder>
     </div>
+        <br />
         <%--FOOTER START--%>
-        <div id="footer">Copyright &copy; 2014 The Art Farm | Deidre Steenman </div>
-    </form>
+     <div id="footer">Copyright &copy; 2014 The Art Farm | Deidre Steenman </div>
+  
+    
 </body>
 </html>
