--- a/DeidreFinal/FinalStyle.css
+++ b/DeidreFinal/FinalStyle.css
@@ -1,52 +1,97 @@
 ﻿body {
+    background:lightgoldenrodyellow;
+    color:blue;
+    text-align:center;
+    font-family: arial;
 }
-/*TEXT*/
-h1 { 
-    color: blue; 
-    font: bold 4em Arial, Sans-Serif; 
-    letter-spacing: 1px; 
-    width: 1075px; 
-    height: 45px; 
-    }
-
-h2 { 
-    background-color: inherit; 
-    color:blue; 
-    font-size:140%; 
-    font-weight:bold; 
-    margin: 0px 0 10px 0; 
-    padding:0;
-    }
-
-h3 {
-    color:#7ea743; 
-    font-size:120%; 
-    font-weight:bold; 
-    margin: 0px 0 10px 0; 
-    padding:0; 
-    height: 75px; 
-    text-align:center; 
-    width: 1022px;
-    }
-
-h4 { 
-    color:blue; 
-    font-size:100%; 
-    font-weight:bold; 
-    margin: 0px 0 10px 0;
-    padding:0; 
-    height: 25px; 
-    text-align:left;
-    width: 196px;
-    }
+#logo
+{
+    height: 220px;
+    width: 800px;
+}
 
 /*FOOTER*/
 #footer
 {
-       background: #FFF;
-    color: Blue;
+    color:blue;
     height: 43px;
     text-align: center;
     font-size: 90%;
 }
+
+
+
+
+.nav {
+	margin: 0px;
+	padding: 0px;
+	list-style: none;
+}
+
+.nav li {
+	float: left;
+	width: 160px;
+	position: relative;
+}
+
+.nav li a {
+	background:lightgoldenrodyellow;
+	color: blue;
+	display: block;
+	padding: 7px 8px;
+	text-decoration: none;
+	border-top: 1px solid #069;
+}
+
+.nav li a:hover {
+	color: #069;
+}
+
+/*=== submenu ===*/
+
+.nav ul {
+	display: none;
+	position: absolute;
+	margin-left: 0px;
+	list-style: none;
+	padding: 0px;
+}
+
+.nav ul li {
+	width: 160px;
+	float: left;
+}
+
+.nav ul a {
+	display: block;
+	height: 15px;
+	padding: 7px 8px;
+	color: #fff;
+	text-decoration: none;
+	border-bottom: 1px solid blue;
+}
+
+.nav ul li a:hover {
+	color: #069;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
