--- a/DeidreFinal/FinalStyles.css
+++ b/DeidreFinal/FinalStyles.css
@@ -15,7 +15,20 @@ h2
     text-align:center;
     text-decoration-color:orange;
 }
-
+#pnlSignedIn
+{
+ margin:auto;
+}
+/*-----------------------------------------------------------------------------------------------------*/
+/*How the bottom of every page will look*/
+/*FOOTER*/
+#footer
+{
+    margin:auto;
+    color:blue;
+    font-size: 90%;
+    padding: 0px;
+}
 /*-----------------------------------------------------------------------------------------------------*/
 /*How the top part of each page will look*/
 .logo
@@ -26,16 +39,15 @@ h2
    
 }
 
-navigation{
-    float:left;
-    /*margin-bottom: 17px;*/
+navigation
+{
+ clear:both;
 }
 
 .nav {
-    
+    margin:auto;
     display: inline-block;
-    width:100%;
-	padding: 0px;
+  	padding: 0px;
 	list-style: none;
     height: 150px;
 }
@@ -54,7 +66,6 @@ navigation{
 	display: block;
 	padding: 7px 8px;
 	text-decoration: none;
-    /*height: 23px;*/
     width: 204px;
 }
 
@@ -93,7 +104,7 @@ navigation{
 /*-----------------------------------------------------------------------------------------------------*/
 /*Login------------------------------------------------------------------------------------------------*/
 
-#wrapper{
+/*#wrapper{
 
 color: #111;
 
@@ -225,14 +236,19 @@ width:400px;
 
 margin:auto;
 
+}*/
+#myLogin
+{
+    margin:auto
 }
+
 /*How each individual page will look if so needed*/
 /*ADMIN================================================================================================*/
 
 /*ADMINREPORTS=========================================================================================*/
 /*COMMENT==============================================================================================*/
 #container{
-     clear:both;
+     
 }
 /*DATABASE=============================================================================================*/
 /*FINAL================================================================================================*/
@@ -241,27 +257,24 @@ margin:auto;
 /*JAVASCRIPT===========================================================================================*/
 
 /*PASSWORD=============================================================================================*/
+#pnlChangePassword
+{ 
+    
+    
+}
+
 /*REGISTER=============================================================================================*/
 #pnlClientUserReg
 {
-    align-content:center;
-/*Width:272px;*/ 
-
+    margin: auto;
 }
 
-
-
-#registTable
+.RegTextBox
 {
-
-margin-left:150px;
+width:auto;
 }
-#pnlRegConfirm
-{
-/*align-content:center;*/
 
-  
-}
+
 /*SECURITY=============================================================================================*/
 /*STORE================================================================================================*/
 /*WALKING==============================================================================================*/
@@ -275,19 +288,7 @@ margin-left:150px;
 
 
 
-/*-----------------------------------------------------------------------------------------------------*/
-/*How the bottom of every page will look*/
-/*FOOTER*/
-#footer
-{
-    clear:both;
-    color:blue;
-    height: 23px;
-    text-align: center;
-    font-size: 90%;
-    margin: 0 auto;
-    padding: 0px;
-}
+
 
 
 
